@@ -19,7 +19,6 @@ package org.springframework.cloud.kubernetes.commons.config;
 import java.util.ArrayList;
 import java.util.List;
 import java.util.Map;
-import java.util.stream.Collectors;
 import java.util.stream.Stream;
 
 import org.springframework.boot.context.properties.ConfigurationProperties;
@@ -67,7 +66,7 @@ public record SecretsConfigProperties(boolean enableApi, @DefaultValue Map<Strin
 		return this.sources.stream()
 			.flatMap(s -> s.normalize(this.name, this.namespace, this.labels, this.includeProfileSpecificSources,
 					this.failFast, this.useNameAsPrefix, environment))
-			.collect(Collectors.toList());
+			.toList();
 	}
 
 	/**
